# 02476_MLOps_Group_82

./: .gitignore  .pre-commit-config.yaml  CHECKLIST.md  LICENSE  README 2.md  README.md  cloudbuild.yaml  cloudbuild_api.yaml  pyproject.toml  requirements.txt  tasks.py  train.dockerfile
.dvc/: config
.github/workflows/: lint.yaml  tests.yaml
configs/: config.yaml  configs.yaml
data/: sample.dvc
data/raw/: news_urls.csv.dvc
dockerfiles/: .dockerignore  README.txt  api.dockerfile  train.dockerfile
docs/: dvc_guide_readme.md  mkdocs.yaml
mlops82_uv/: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
mlops82_uv/.devcontainer/: devcontainer.json
mlops82_uv/dockerfiles/: api.dockerfile  train.dockerfile
mlops82_uv/docs/: mkdocs.yaml
mlops82_uv/docs/source/: index.md
mlops82_uv/models/: baseline.joblib
mlops82_uv/reports/: baseline_metrics.json
mlops82_uv/src/mlops_course_project/: README.txt  data.py  predict.py  train.py
mlops82_uv/tests/: test_data.py
reports/: README.md  baseline_metrics.json
src/mlops/: data.py
src/mlops_course_project/: README.txt  __init__.py  api.py  data.py  data_drift.py  model.py  predict.py  train.py
src/mlops_course_project/models/: baseline.joblib
src/mlops_course_project/outputs/2026-01-16/12-52-49/: metrics.json  model.joblib
src/mlops_course_project/outputs/2026-01-16/12-52-49/.hydra/: config.yaml  hydra.yaml
src/mlops_course_project/reports/: baseline_metrics.json
tests/: locustfile.py  test_api.py  test_data.py  test_model.py  test_train.py
