[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlops_course_project"
version = "0.0.1"
description = "This project tries to identify whether an article headline belongs to NBC news or fox news"
authors = [
  { name = "mlops_Group82", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "dvc>=3.66.1",
    "dvc-gs>=3.0.2",
    "evidently>=0.7.20",
    "fastapi==0.115.6",
    "google-cloud-storage>=3.8.0",
    "huggingface-hub>=1.3.1",
    "hydra-core>=1.3.2",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch==2.9.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
